Dark Mode: Fix colors in threedot asset menu

--- a/ui/components/ui/menu/menu.scss
+++ b/ui/components/ui/menu/menu.scss
@@ -34,6 +34,7 @@
   width: 100%;
   padding: 14px 0;
   cursor: pointer;
+  color: inherit;
 
   &__icon {
     margin-right: 8px;
